test/test_examples/syntactic_examples/syntax_error/error_statement_37.zig
// Syntax error: missing left operand

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var z : f64 = / 8;
}